// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="container-fluid d-flex justify-content-center p-4  summary"
>
  <p
    className="p-0 m-0 text-center"
  >
    Viewing 
    <span>
      1
       
    </span>
    expense
     totalling  
    <span>
      $10.00
    </span>
  </p>
   
  <br />
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="container-fluid d-flex justify-content-center p-4  summary"
>
  <p
    className="p-0 m-0 text-center"
  >
    Viewing 
    <span>
      2
       
    </span>
    expenses
     totalling  
    <span>
      $10.00
    </span>
  </p>
   
  <br />
</div>
`;
